# datavisualizer

./: LICENSE  package-lock.json  package.json
betterwithdata-viz/: .coveragerc  .gitignore  CITATION.cff  README.md  betterwithdata_viz.json  codecov.yml  dev-logbook.md  install.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.js
betterwithdata-viz/betterwithdata_viz/: __init__.py  _frontend.py
betterwithdata-viz/betterwithdata_viz/nbextension/: extension.js
betterwithdata-viz/betterwithdata_viz/tests/: test_nbextension_path.py
betterwithdata-viz/docs/: Makefile  environment.yml  make.bat
betterwithdata-viz/docs/source/: conf.py  develop-install.rst  index.rst  installing.rst  stethoscope-demo.rst
betterwithdata-viz/examples/: SoniScope-Graz.ipynb  SoniScope-Rad-Deutsch.ipynb  SoniScope.ipynb  introduction.ipynb
betterwithdata-viz/src/: extension.ts  plugin.ts
symphony_lib/: .gitignore  package.json
